--- a/frontend/src/components/dashboard/create/Create.module.scss
+++ b/frontend/src/components/dashboard/create/Create.module.scss
@@ -89,3 +89,7 @@
     }
   }
 }
+
+.validateSMSCredentialsInfo {
+  margin-bottom: 2rem;
+}
