--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -93,7 +93,7 @@ p {
 .clickable {
   color: $indigo-blue;
   cursor: pointer;
-  margin-top: 1rem;
+  margin-top: 2rem;
 
   &:hover {
     text-decoration: underline;
